# lab_3.2.rec

./: CMakeLists.txt  List.cpp  List.h  README.md  UnitTest.cpp  main.cpp
